# scalpel

./: CONSENSUS_REPORT.txt  IDEAS.md  LICENSE  QUICKSTART_RU.md  README.md  conftest.py  pyproject.toml  run_feynman.py
Result/: resultsrun_2026-04-08.txt.txt
Scalpel/scalpel_for_github/: CONSENSUS_REPORT.txt  PHILOSOPHY_AND_METHODOLOGY.md  PREPARATOR_GUIDE.md  QUICKSTART_EN.md  README.md  idea_adel_2026.md  requirements.txt  run_feynman_official.py  run_real.py  run_test.py
Scalpel/scalpel_for_github/Result/: resultsrun_2026-04-08.txt.txt
Scalpel/scalpel_for_github/scalpel/: critical_thinking.py  diffusion_denoise.py  discovery.py  dspy_optimizer.py  (+12 more)
scalpel/: __init__.py  __main__.py  anthropologist.py  atomic_precision.py  audit.py  cli.py  config.py  curriculum.py  data.py  dim_codes.py  episodic_memory.py  navigator.py  oracle.py  physicist_veto.py  pre_pysr_debate.py  preparator.py  surgeon.py
scalpel_vault/: FINAL_REPORT_LLM_v10.txt  chronicle_dspy_stats.jsonl  discoveries.jsonl  disputed_formulas.json  gold_formulas.json  gold_formulas_INTERNAL_DO_NOT_SHARE.json  gold_formulas_full.json  preparator_log.jsonl  pysr_phase_result.json  real_ground_truth_PRIVATE.json  reasoning_log.jsonl  rejected_formulas.json
scalpel_vault/episodic_memory/: chronicle_steps.jsonl  curriculum_memory.jsonl  invariants_learned.jsonl  mystic_memory.jsonl  physicist_memory.jsonl  pragmatist_memory.jsonl  scientific_cycles.jsonl  skeptic_memory.jsonl
tests/: test_data.py  test_dim_codes.py  test_navigator.py  test_real_mode.py  test_shadow.py  test_topological_surgery.py
(+28 files in other folders)
